<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_revision_notes"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="Student Share" />
        <item
            android:id="@+id/nav_uni_buidlings_locations"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="University locations" />
        <item
            android:id="@+id/nav_pubs_clubs"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="Nearby Pubs and clubs" />
        <item
            android:id="@+id/nav_uni_twitter"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="University News" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_locateme"
                android:icon="@drawable/ic_locc"
                android:title="Locate me!" />


            <item
                android:id="@+id/offlineNotes"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:title="Personal Notes"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="About" />

        </menu>
    </item>

</menu>
